--- a/index.html
+++ b/index.html
@@ -4,8 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Assignment</title>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="styles/2nd.css">
 </head>
-<body>
-    
+<body class="noto-serif">
+    <header class="display-none">
+        <div class="none flex">
+            <p>2.04</p>
+            <div>
+                <img src="./pic/signal.png" width="20px" height="18px" alt="">
+                <img src="./pic/wifi.png" width="20px" height="22px" alt="">
+                <img src="./pic/battery-status.png" width="20px" height="20px" alt="">
+            </div>
+    </header>
+    <header>
+        </div>
+        <nav class="flex">
+            <div class="hdiv1 head1">
+            <img src="./pic/logo.png" alt="logo">
+        </div>
+        <div class="hdiv2">
+            <ul class="hul flex">
+                    <li class="hoe"><a href="" class="home">Home</a></li>
+                    <li class="sho"><a href="" class="ha dark-3">Shop</a></li>
+                    <li class="about"><a href="" class="ha dark-3">About Us</a></li>
+                    <li class="car"><a href="" class="card"><i class="fa-solid fa-cart-shopping"></i> Cart($56)</a></li>   
+            </ul>
+        </div>
+        </nav>
+        <div class="hdiv3 flex">
+            <div class="hdiv4">
+                <h1>ALWAYS <span class="dark-4">FRESH <br> FLOWER</span</h1>
+                <p class="dark-2">Indulge your senses with the beauty and fragrance of <br> our fresh flower shop. From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect for any occasion.
+            </div>
+            <div class="hdiv5">
+                <img src="./pic/hero-flower.png" width="400px" height="330px" alt="">
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="sec1">
+            <div class="card">
+                <img src="" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
