--- a/index.html
+++ b/index.html
@@ -46,9 +46,90 @@
         </div>
     </header>
     <main>
+        <section class="sec0">
+            <h2 class="size">Our <span class="dark-4">Plants</span></h2>
+            <p class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop.<br>From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+        </section>
         <section class="sec1">
             <div class="card">
-                <img src="" alt="">
+                <img src="./pic/sample-flower-image.png" width="180px" alt="">
+                <div class="center1">
+                    <p>Lily Blossom</p>
+                    <h3>20 USD</h3>
+                </div>
+                <input class="button" type="submit" value="ADD TO CART">
+            </div>
+            <div class="card">
+                <img src="./pic/sample-flower-image.png" width="180px" alt="">
+                <div class="center1">
+                    <p>Lily Blossom</p>
+                    <h3>20 USD</h3>
+                </div>
+                <input class="button" type="submit" value="ADD TO CART">
+            </div>
+            <div class="card">
+                <img src="./pic/sample-flower-image.png" width="180px" alt="">
+                <div class="center1">
+                    <p>Lily Blossom</p>
+                    <h3>20 USD</h3>
+                </div>
+                <input class="button" type="submit" value="ADD TO CART">
+            </div>
+            <div class="card">
+                <img src="./pic/sample-flower-image.png" width="180px" alt="">
+                <div class="center1">
+                    <p>Lily Blossom</p>
+                    <h3>20 USD</h3>
+                </div>
+                <input class="button" type="submit" value="ADD TO CART">
+            </div>
+            <div class="card">
+                <img src="./pic/sample-flower-image.png" width="180px" alt="">
+                <div class="center1">
+                    <p>Lily Blossom</p>
+                    <h3>20 USD</h3>
+                </div>
+                <input class="button" type="submit" value="ADD TO CART">
+            </div>
+            <div class="card">
+                <img src="./pic/sample-flower-image.png" width="180px" alt="">
+                <div class="center1">
+                    <p>Lily Blossom</p>
+                    <h3>20 USD</h3>
+                </div>
+                <input class="button" type="submit" value="ADD TO CART">
+            </div>
+            <div class="card">
+                <img src="./pic/sample-flower-image.png" width="180px" alt="">
+                <div class="center1">
+                    <p>Lily Blossom</p>
+                    <h3>20 USD</h3>
+                </div>
+                <input class="button" type="submit" value="ADD TO CART">
+            </div>
+            <div class="card">
+                <img src="./pic/sample-flower-image.png" width="180px" alt="">
+                <div class="center1">
+                    <p>Lily Blossom</p>
+                    <h3>20 USD</h3>
+                </div>
+                <input class="button" type="submit" value="ADD TO CART">
+            </div>
+        </section>
+        <section class="sec2 flex">
+            <div class="img1">
+                <img src="./pic/flower-store.png" width="400px" height="460px" alt="">
+            </div>
+            <div class="li">
+                <h2 class="size">Flower & Plants <br> Lover</h2>
+                <ul>
+                    <li class="dark-3">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                    <li class="dark-3">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                    <li class="dark-3">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                    
+                </ul>
+
             </div>
         </section>
     </main>
