--- a/index.html
+++ b/index.html
@@ -132,6 +132,31 @@
 
             </div>
         </section>
+        <section class="sec3">
+            <h2 class="size"><span class="dark-4">Latest</span> Deals</h2>
+            <p class="dark-3">Indulge your senses with the beauty and fragrance of our fresh flower shop.<br>From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </section>
+        <section class="sec4">
+            <div class="bg-1 flex">
+                <div>
+                    <p>60% Off | Bloom Plant</p>
+                    <a href="">Shop Now</a>
+                </div>
+            </div>
+             <div class="bg-3 flex bg-1">
+                <div>
+                    <p>25% Off | Zabo Plant</p>
+                    <a href="">Shop Now</a>
+                </div>
+            </div>
+            <div class="bg-2 flex bg-1">
+                <div>
+                    <p>30% Off | Ana  Plant</p>
+                    <a href="">Shop Now</a>
+                </div>
+            </div>
+           
+        </section>
     </main>
     <footer>
 
