--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@
             </div>
            
         </section>
+        <section class="sec5">
+            <div class="bg-4">
+            <div>
+                <p class="pp size">Join the colorful Bunch</p>
+                <input class="form" type="email" name="" placeholder="Write Email" id="">
+                <input class="ii button" type="submit" value="Subscribe">
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer>
 
