--- a/index.html
+++ b/index.html
@@ -168,7 +168,35 @@
 
         </section>
     </main>
-    <footer>
+    <footer class="flex">
+        <div class="fdiv1">
+            <img src="./pic/logo.png" alt="">
+            <p class="dark-3">Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+        </div>
+        <div class="fdiv2">
+            <ul>
+                <li class="flli"><a href="" class="faa">Home</a></li>
+                <li class="flli"><a href="" class="faa">About us</a></li>
+                <li class="flli"><a href="" class="faa">Blog</a></li>
+                <li class="flli"><a href="" class="faa">FAQ</a></li>
+                <li class="flli"><a href="" class="faa">Contact us</a></li>
+            </ul>
+        </div>
+        <div class="fdiv3">
+            <ul>
+                <li class="ffli"><a href="" class="ffa">Features</a></li>
+                <li class="ffli"><a href="" class="ffa">Pricing</a></li>
+                <li class="ffli"><a href="" class="ffa">Privacy policy </a></li>
+                <li class="ffli"><a href="" class="ffa">Terms of Service</a></li>
+                <li class="ffli"><a href="" class="ffa">Help Center</a></li>
+            </ul>
+        </div>
+        <div class="fdiv4">
+            <img src="./pic/icon-facebook.png" alt="">
+            <img src="./pic/icon-linkedin.png" alt="">
+            <img src="./pic/icon-twitter.png" alt="">
+            <img src="./pic/icon-youtube.png" alt="">
+        </div>
 
     </footer>
 </body>
