--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
                 <input class="button" type="submit" value="ADD TO CART">
             </div>
         </section>
-        <section class="sec2 flex">
-            <div class="img1">
+        <section class="sec2">
+            <div class="runing">
+                <img src="./pic/trusted-badge.png" width="250px">
+            </div>
+            <div class="another flex">
+                <div class="img1">
                 <img src="./pic/flower-store.png" width="400px" height="460px" alt="">
             </div>
             <div class="li">
@@ -130,6 +134,7 @@
                     
                 </ul>
 
+            </div>
             </div>
         </section>
         <section class="sec3">
